# leadsheet

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  instructions.md  pyproject.toml
.agents/skills/add-song/: LEARNINGS.md  SKILL.md
.agents/skills/build-gallery/: SKILL.md
.agents/skills/compose-music21/: LEARNINGS.md  SKILL.md
.agents/skills/image-to-song/: LEARNINGS.md  SKILL.md
.agents/skills/render-leadsheet/: LEARNINGS.md  SKILL.md
.agents/skills/transcribe-tune/: LEARNINGS.md  SKILL.md
.agents/skills/verify-notes/: SKILL.md
.claude/: INDEX.md
.claude/agents/: song-builder.md
.claude/rules/: lilypond-pipeline.md  python-package.md
.claude/skills/: add-song  build-gallery  compose-music21  image-to-song  render-leadsheet  transcribe-tune  verify-notes
.cursor/: INDEX.md
.cursor/rules/: lilypond-pipeline.mdc  python-package.mdc
data/: lead-sheet.ily
data/corpus/: happy_birthday.mid  the_entertainer.mid  the_entertainer_simple.mid  we_wish_you_a_merry_christmas.mid
data/corpus/est/: happy_birthday.oracle.mid  the_entertainer.oracle.mid  the_entertainer_simple.oracle.mid  we_wish_you_a_merry_christmas.oracle.mid
data/gallery/entertainer_musescore/: entertainer_musescore.ly
data/gallery/happy_birthday/: happy_birthday.ly
data/gallery/love_me_tender/: love_me_tender.ly
data/gallery/rush_e/: rush_e.ly
data/gallery/the_entertainer_simple/: the_entertainer_simple.ly
src/leadsheet/: __init__.py  cli.py  compose.py  corpus.py  engine.py  gallery.py  verify.py
tests/: test_compose.py  test_engine.py  test_gallery.py  test_verify.py
(+3 files in other folders)
